# opengl-cube

./: CMakeLists.txt  README.md
copied_to_bin/: FragmentShader.frag  LightSource.vert
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  LightSource.frag  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
